--- a/index.html
+++ b/index.html
@@ -61,9 +61,13 @@
         </div>
         <nav class="aside-nav">
             <ul class="aside-nav__list">
-                <li class="aside-nav__item"><a href="">Porque KII?</a></li>
-                <li class="aside-nav__item"><a href="">KII Coin</a></li>
-                <li class="aside-nav__item"><a href="">KII Wallet</a></li>
+                <li class="aside-nav__item"><a id="first-Section__a" class="link" href="#first-Section">Home</a></li>
+                <li class="aside-nav__item"><a id="second-section__a" class="link" href="#second-section">Porque
+                        KII?</a></li>
+                <li class="aside-nav__item"><a id="third-section__a" class="link" href="#third-section">KII Coin</a>
+                </li>
+                <li class="aside-nav__item"><a id="fourth-section__a" class="link" href="#fourth-section">KII Wallet</a>
+                </li>
             </ul>
         </nav>
         <div class="aside-circuit">
